# dtu-package

./: .gitignore  README.md  dtu.bat  dtu2.bat  experiments.sh  generate.py  main.py  params.py  relive.py  run.bat  setup.cfg  setup.txt  t.md  test.md  tester.py  u.bat  upgrade.bat  upgrade.sh
Utils/: experiments.sh
scripts/: dtu.bat  myscript.sh  run.sh  save.sh  su.bat  submit_cpu.sh  submit_gpu.sh  upgrade.sh
src/: cli_scripts.py  dtu.py
src/cli_scripts/: __init__.py
src/dtu/: __init__.py  scripts.py  server.py
