[metadata]
name = dtu
version = 0.0.1
author = Magnus Fredslund
author_email = fredslundmagnus@gmail.com
description = A small helper package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FredslundMagnus/dtu-server
project_urls =
    Bug Tracker = https://github.com/FredslundMagnus/dtu-server/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
scripts =
    scripts/run.sh
    scripts/save.sh
    scripts/upgrade.sh

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dtu = dtu.scripts:cli